# python-module-starter

./: .gitignore  LICENSE  README.md  pdm_build.py  pyproject.toml  requirements.txt
.github/scripts/: get_set_version_tag  write_repo.py
.github/workflows/: generate_repo.yaml  publish_local.yaml  publish_pypi.yaml  release.yaml
buildscript/: next_version.py  write_repo.py
buildscript/requirements.d/: build.txt  write_repo.txt
buildscript/util/: version.py
src/fleb/starter/: Config.py  __init__.py  __main__.py  defaults.py  env_my_info.py  files.py  inquisition.py  pyproject_toml.py  src.py  tree.py
src/fleb/starter/assets/: template.gitignore  template.pyproject.toml
src/yournamespace/yourpackage/: __init__.py
