[build-system]
requires = ["setuptools >= 80.0.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "yournamespace.yourpackage"
keywords = ["template", "dummy", "forgot-to-change-the-config"]
authors = [
  { name="Your Name Here", email="nobody@example.com" },
]
description = "A Module, based on the Python+GitHub Actions Installable Module Starter"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = "UNLICENSED"
license-files = ["LICENSE"]

[project.urls]
# Homepage = "https://github.com/.../..."
# Source = "https://github.com/.../..."
# Issues = "https://github.com/.../.../issues"
# Author = "https://..."

[tool.setuptools.dynamic]
version = {file = "VERSION"}
