[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
dynamic = ["version"]
name = "fleb-starter"
keywords = ["template", "starter", "python", "project", "bootstrap"]
authors = [
  { name="FLEB (a.k.a. SuperFLEB)" },
]
description = "Python Project Starter"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = "MIT-0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/SuperFLEB/python-starter"
Source = "https://github.com/SuperFLEB/python-starter"
Issues = "https://github.com/SuperFLEB/python-starter/issues"
Author = "https://flebsite.com"

[tool.pdm.build]
package-dir = "src"
includes = ["src/fleb"]
custom-hook = "pdm_build.py"

[tool.pdm.version]
source = "call"
getter = "buildscript.util.version:get_version()"
